--- a/index.html
+++ b/index.html
@@ -63,6 +63,26 @@
             </tr>
         </table>
     </div>
-    <!--<button id="start">Start</button>-->
+    
+    <div style="margin:8% 30%;">
+        <table class="radioTable">
+            <tr>
+                <td>
+                    <input type="radio" name="radiog_dark" id="easy" class="css-checkbox" checked="checked"/>
+                    <label for="easy" class="css-label radGroup2">Easy</label>
+                </td>
+                <td>
+                    <input type="radio" name="radiog_dark" id="medium" class="css-checkbox"/>
+                    <label for="medium" class="css-label radGroup2">Medium</label>
+                </td>
+                <td>
+                    <input type="radio" name="radiog_dark" id="hard" class="css-checkbox"/>
+                    <label for="hard" class="css-label radGroup2">Hard</label>
+                </td>
+            </tr>
+        </table>
+        <button class="startBtn">START</button>
+
+    </div>
 </body>
 </html>
