--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
                 <td><div class="block"><label id="40" class="label"></label></div></td>
             </tr>
         </table>
+        <span id="timer" class="timerSpan"></span>
     </div>
-    
-    <div style="margin:8% 30%;">
+    <div id="optionsDiv" style="margin:8% 30%;">
         <table class="radioTable">
             <tr>
                 <td>
@@ -82,7 +82,6 @@
             </tr>
         </table>
         <button class="startBtn">START</button>
-
     </div>
 </body>
 </html>
