how to play link

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                 </td>
             </tr>
         </table>
-        <button class="startBtn">START</button>
+        <button class="startBtn">START</button><br/>
+        <a id="howto" href="#" style="margin-left:50%;margin-top:10px;">How to play?</a>
     </div>
 </body>
 </html>
